Documentation/5.4/Raven.Documentation.Pages/indexes/multi-map-indexes.js.markdown
# Multi-Map Indexes
---

{NOTE: }

* Multi-Map indexes allow you to index data from multiple collections e.g. polymorphic data (check the [example](../indexes/indexing-polymorphic-data)) 
  or any common data between types.  

* Learn how to [create Multi-Map-Reduce indexes](../indexes/map-reduce-indexes#creating-multi-map-reduce-indexes).  

* In this page:
  * [Indexing multiple collections](../indexes/multi-map-indexes#indexing-multiple-collections)
  * [Indexing polymorphic data](../indexes/multi-map-indexes#indexing-polymorphic-data)
  * [Searching across multiple collections](../indexes/multi-map-indexes#searching-across-multiple-collections)

{NOTE/}

---

{PANEL: Indexing multiple collections}

Let's assume that we have `Dog` and `Cat` classes, and both of them inherit from the class `Animal`:

{CODE-TABS}
{CODE-TAB:nodejs:Dog multiMapClass_1@indexes/multiMap.js /}
{CODE-TAB:nodejs:Cat multiMapClass_2@indexes/multiMap.js /}
{CODE-TAB:nodejs:Animal multiMapClass_3@indexes/multiMap.js /}
{CODE-TABS/}

Now we can define our index in the following way:

{CODE:nodejs multiMapIndex_1@indexes/multiMap.js /}

{CODE-TABS}
{CODE-TAB:nodejs:Query multiMapQuery_1@indexes/multiMap.js /}
{CODE-TAB-BLOCK:sql:RQL}
from index "Animals/ByName"
where Name == "Mitzy"
{CODE-TAB-BLOCK/}
{CODE-TABS/}

{PANEL/}

{PANEL: Indexing polymorphic data}

Please read more in our dedicated article on indexing polymorphic data.  
This article can be found [here](../indexes/indexing-polymorphic-data).

{PANEL/}

{PANEL: Searching across multiple collections}

Another great usage of Multi-Map indexes is smart-search.  
To search for products, companies, or employees by their name, you need to define the following index:

{CODE:nodejs multiMapIndex_2@indexes/multiMap.js /}

and query it using:

{CODE-TABS}
{CODE-TAB:nodejs:Query multiMapQuery_2@indexes/multiMap.js /}
{CODE-TAB-BLOCK:sql:RQL}
from index "Smart/Search" 
where search(content, "Lau*")
select id() as id, displayName, collection
{CODE-TAB-BLOCK/}
{CODE-TABS/}

{PANEL/}

## Remarks

{INFO Remember that all map functions **must** output objects with **identical** shape (field names have to match). /}

## Related Articles

### Indexes
- [Map Indexes](../indexes/map-indexes)
- [Map-Reduce Indexes](../indexes/map-reduce-indexes)
- [Indexing Polymorphic Data](../indexes/indexing-polymorphic-data)

### Studio
- [Create Multi-Map Index](../studio/database/indexes/create-multi-map-index)

<br/>

## Code Walkthrough

- [Multi-Map-Index: Basic](https://demo.ravendb.net/demos/csharp/multi-map-indexes/multi-map-index-basic)
- [Multi-Map-Index: Customized Fields](https://demo.ravendb.net/demos/csharp/multi-map-indexes/multi-map-index-customized-fields)
- [Map Index](https://demo.ravendb.net/demos/csharp/static-indexes/map-index)
- [Multi-Map-Reduce Index](https://demo.ravendb.net/demos/csharp/multi-map-indexes/multi-map-reduce-index)
